# crm-harpia-pro

./: CMakeLists.txt  README.md  app.js  app.py  cpp_bridge.py  index.html  index.html.html  negotiation_processor.cpp  storage.js  styles.css
